static/css/all.css
/* ... */
	.tab-content h2 {
		font-size: 17px;
	}

h3 {
	font-size: 1.15em;
}
h4 {
	font-size: 1.05em;
}
h5 {
	font-family: inherit;
	font-size: 1em;
	text-transform: uppercase;
	}

h2 span, h3 span, h4 span, span span, a em {
	font-weight: normal;
	font-style: italic;
	text-transform: none;
	}
p+h2,
ul+h2,
ol+h2,
pre+h2 {
	margin-top: 1.5em;
}

header ul, footer ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
}

#content p {
	margin-bottom: 1em;
}
	#content p.list-group-item-text {
		margin: 0;
	}

#content hr {
	border-color: #557D9A;
}

blockquote {
	font-size: inherit;
}

/* LAYOUT STYLES */

.box {
	background: #f3f1e9 url(../images/bg-paper.jpg);
	border: solid #e7e4dc 1px;
	-moz-box-shadow:
		0 0 0 5px #f9f8f4,
		0 1px 2px 5px rgba(106,106,106,.4);
	box-shadow:
		0 0 0 5px #f9f8f4,
		0 1px 2px 5px rgba(106,106,106,.4);
}

/* ADS */

.ads.square {
	margin: 60px 0;
	}
.ads.footer.leaderboard {
	display: none;
	margin: 20px 0 20px 0;
	text-align: center;
	}
	.ads .explainer {
		margin-bottom: 10px;
		text-align: center;
		font-size: 12px;
		}

/* MASTER LAYOUT */

#masthead {
	margin-bottom: 15px;
	background-color: #1D4E70;
	font-family: 'PT Sans', sans-serif;
	font-size: 13px;
	color: #FAFAFA;
}
#masthead .navbar {
	/* override bootstrap */
	margin-bottom: 0;
	border: none;
}
		#masthead .nav a {
			color: inherit;
		}
		#masthead .nav a:hover, #masthead .nav a:focus, #masthead .nav .open>a {
			background-color: #258;
			color: white;
		}
		#masthead .nav .dropdown-menu {
			background: linear-gradient(#1D4E70, #022640);
		}
		#masthead .dropdown-menu {
			margin-top: -2px;
		}
		#masthead .dropdown-menu a:hover, #masthead .dropdown-menu a:focus {
			color: black;
		}
		#masthead .navbar-toggle {
			border-color: #557D9A;
		}
		#masthead .navbar-toggle .icon-bar {
			background-color: #557D9A;
		}
		#masthead input {
			color: black;
		}
		.nav-item-image img {
			padding-top: 1px;
			width: 49px;
			height: 49px;
		}
		@media screen and (min-width: 768px) {
			#masthead .nav-item-image {
				 padding-top: 0;
				 padding-bottom: 0;
			}
		}

#logo {
	display: block;
	background: url(../images/logo.png) 0 0 no-repeat;
	height: 30px;
	width: 110px;
	margin-top: 11px;
	margin-left: 15px;
	text-indent: -9999px;
	overflow: hidden;
}

.breadcrumb {
	margin-top: 15px;
	margin-bottom: 0;
	padding-bottom: 0; /* override bootstrap, always followed by a h1 which has a margin */
	padding-left: 0;
	background: none;
	font-size: 88%;
}
	.breadcrumb a {
	}

.panel-info {
	border: none;
	border-radius: 12px;
	background-color: #fece99;
    color: black;
}
	.panel-info a {
		color: #003300;
	}
.panel-success {
	border: none;
	border-radius: 12px;
	background-color: #9ED56F;
}
	.panel-success button {
		background-color: white;
	}

#categories {
	}
	#categories li {
		display: inline-block;
		width: 225px;
		min-height: 153px;
		margin: 0 3px 20px;
		}
		#categories li > a {
			display: block;
			width: 225px;
			margin-top: 13px;
			padding-top: 137px;
			}
		#categories #link-members > a {
			background: url(../images/img-congress-members.png) center 5px no-repeat;
			}
		#categories #link-bills > a {
			background: url(../images/img-bills-resolutions.png) center 5px no-repeat;
			}
		#categories #link-votes > a {
			background: url(../images/img-voting-records.png) center top no-repeat;
			}
		#categories #link-committees > a {
			background: url(../images/img-committees.png) center 15px no-repeat;
			}

/* Summary box styles
	 ================================================= */
	.summary-box .info {
		background: url(../images/divider-4.gif) repeat-x 0 100%;
		padding: 0 0 12px;
		margin: 0 0 9px;
		}
	@media (min-width: 768px) {
		dl.dl-horizontal dt {
			width: 90px;
			font-weight: normal;
			}
		dl.dl-horizontal dd {
			margin-left: 100px;
		}
			dl.dl-horizontal dd p {
				line-height: 127%;
				margin-bottom: .33em;
			}
				dl.dl-horizontal dd p:first-child {
					line-height: inherit;
					margin-bottom: .1em;
				}
		dl.dl-horizontal.wide dt {
			width: 130px;
			}
		dl.dl-horizontal.wide dd {
			margin-left: 140px;
			}
	}

.photo img {
	-moz-box-shadow: 2px 2px 2px 0px rgba(168,168,168,1);
	box-shadow: 2px 2px 2px 0px rgba(168,168,168,1);
	margin: 4px;
	}
.summary-box .photo {
	margin: 0 7px 10px 7px;
}
.photo a,
.photo a:hover {
	display: block;
	margin: 0;
	padding: 0;
	border-bottom: 0;
}

/* Member details styles
	 ================================================== */
	.members-grid .member {
	text-align: center;
	margin-bottom: 30px;
	}
	.members-grid .member .photo {
	margin: 0 auto;
	}


/* Vote Statistics styles =========================== */
/* ================================================== */

.stats {
	text-align: center;
	margin-left: 21px;
	}
	.stats:first-child {
		margin-left: 0;
	}
	.stats tbody td, .stats tbody th {
		padding: 0;
		border: 1px solid #d7ddd7;
		height: 29px;
		vertical-align: middle;
		}
	.stats tbody th {
		font: 10px/20px serif;
		font-weight: bold;
		text-transform: uppercase;
		text-align: right;
		line-height: 100%;
		padding: 0 10px 0 0;
		width: 84px;
		}
	.stats thead {
		font: 12px/20px serif;
		}
		.stats thead th {
			height: 30px;
			padding: 0 4px;
			vertical-align: middle;
			text-align: center;
			font-weight: normal;
			}
	.stats .pink td { background: #f2f2f2 }
	.stats .gradient .empty {
		background: none;
		border: 0;
		}
	.stats .gradient td {
		background: #ededed url(../images/bg-stats-table.gif) repeat-x;
		height: 44px;
		line-height: 44px;
		vertical-align: middle;
		}
		.stats .gradient td img { vertical-align: middle }
.download-links li {
	padding: 0 0 6px;
	overflow: hidden;
	}
aside .download-links { padding: 31px 0 0 }
.download-links li a {
	background: url(../images/ico-download.gif) no-repeat 0 3px;
	padding: 0 0 0 16px;
	}
.section aside { overflow: hidden }

.stats thead.sortable th { cursor: pointer; }
.stats tbody tr.group td { font-size: 105%; font-weight: bold; text-transform: none; }
/* ... */

